# resourceschedule_resource_schedule_service

./: .gitignore  1214.diff.txt  1955.diff.txt  AGENTS.md  CLAUDE.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README_ZH.md  README_en.md  README_zh.md  Resource_Schedule_Service_Process_Management_Specification_ZH.md  Resource_Schedule_Service_Process_Management_Specifications_ZH.md  Resource_Schedule_Service进程管理规范.md  bundle.json  ohos.build  xxx.patch
cgroup_sched/framework/: BUILD.gn
cgroup_sched/framework/process_group/: BUILD.gn
cgroup_sched/framework/sched_controller/: app_startup_scene_rec.cpp  app_state_observer.cpp  background_task_observer.cpp  cgroup_adjuster.cpp  cgroup_event_handler.cpp  continuous_task_observer.cpp  sched_controller.cpp  supervisor.cpp  transient_task_observer.cpp  window_state_observer.cpp
cgroup_sched/framework/utils/: ressched_utils.cpp
cgroup_sched/test/unittest/: BUILD.gn  cgroup_sched_test.cpp  process_group_sub_test.cpp  process_group_test.cpp  ressched_utils_test.cpp
ressched/: bundle.json  hisysevent.yaml  ressched.gni
ressched/common/: AGENTS.md  BUILD.gn
ressched/common/include/: batch_log_printer.h  bundle_mgr_helper.h  data_share_utils.h  ioobe_task.h  ipc_util.h  oobe_datashare_utils.h  oobe_manager.h  remote_death_recipient.h  res_common_util.h  res_data_ability_observer.h  res_data_ability_provider.h  res_json_type.h  res_sched_event_reporter.h  res_sched_file_util.h  res_sched_hisysevent_report_util.h  res_sched_hitrace_chain.h  res_sched_json_storage_util.h  res_sched_json_util.h  res_sched_log.h  res_sched_lru_cache.h  res_sched_signature_validator.h  res_sched_string_util.h  res_sched_system_util.h  res_sched_time_util.h  single_instance.h
ressched/common/src/: batch_log_printer.cpp  bundle_mgr_helper.cpp  data_share_utils.cpp  oobe_datashare_utils.cpp  oobe_manager.cpp  res_data_ability_observer.cpp  res_data_ability_provider.cpp  res_json_type.cpp  res_sched_event_reporter.cpp  res_sched_file_util.cpp  res_sched_hisysevent_report_util.cpp  res_sched_hitrace_chain.cpp  res_sched_json_storage_util.cpp  res_sched_json_util.cpp  res_sched_signature_validator.cpp  res_sched_string_util.cpp  res_sched_system_util.cpp  res_sched_time_util.cpp
ressched/etc/init/: BUILD.gn  resource_schedule_service.cfg  resource_schedule_service_has_nice.cfg  resourceschedule.cfg
ressched/etc/profile/: BUILD.gn  resourceschedule_trust.xml
ressched/interfaces/: AGENTS.md
ressched/plugins/: AGENTS.md
ressched/plugins/cgroup_sched_plugin/: cgroup_sched.gni
ressched/plugins/component_sched_plugin/: BUILD.gn
ressched/plugins/demo_cplusplus/: BUILD.gn
ressched/plugins/dev_sched_plugin/: BUILD.gn
ressched/plugins/device_scheduler_plugin/: BUILD.gn
ressched/plugins/device_standby_plugin/: BUILD.gn
ressched/plugins/efficiency_plugin/: BUILD.gn
ressched/plugins/frame_aware_plugin/: BUILD.gn
ressched/plugins/socperf_plugin/: BUILD.gn
ressched/profile/: BUILD.gn  res_sched_config.xml  res_sched_plugin_switch.xml
ressched/profile/rk3568/: res_sched_plugin_switch.xml
ressched/sa_profile/: 1901.json  1901.xml  BUILD.gn
ressched/scene_recognize/: AGENTS.md
ressched/scene_recognize/include/: background_perceivable_scene_recognizer.h  background_sensitive_task_overlapping_scene_recognizer.h  continuous_app_install_recognizer.h  list_fling_recognizer.h  scene_recognizer_base.h  scene_recognizer_mgr.h  slide_recognizer.h  system_upgrade_scene_recognizer.h  updating_scene_recognizer.h
ressched/scene_recognize/src/: background_perceivable_scene_recognizer.cpp  background_sensitive_task_overlapping_scene_recognizer.cpp  continuous_app_install_recognizer.cpp  list_fling_recognizer.cpp  scene_recognizer_base.cpp  scene_recognizer_mgr.cpp  slide_recognizer.cpp  system_upgrade_scene_recognizer.cpp  updating_scene_recognizer.cpp
ressched/sched_controller/: AGENTS.md  BUILD.gn  sched_controller.gni
ressched/services/: AGENTS.md  BUILD.gn  libresschedsvc.versionscript  resschedsvc_cfi_blocklist.txt
ressched/test/: AGENTS.md
ressched/test/fuzztest/: BUILD.gn
ressched/test/testutil/: BUILD.gn  ressched_test.cpp
ressched/test/unittest/: BUILD.gn
ressched_executor/: bundle.json  ressched_executor.gni
ressched_executor/common/include/: executor_hitrace_chain.h  res_sched_exe_common_utils.h  res_sched_exe_ipc_utils.h  res_sched_exe_log.h
ressched_executor/common/src/: executor_hitrace_chain.cpp  res_sched_exe_common_utils.cpp
ressched_executor/etc/init/: BUILD.gn  resource_schedule_executor.cfg
ressched_executor/plugins/cgroup_executor_plugin/: BUILD.gn
ressched_executor/plugins/socperf_executor_plugin/: BUILD.gn  libsocperf_executor_plugin.versionscript
ressched_executor/sa_profile/: 1918.json  BUILD.gn
ressched_executor/services/: BUILD.gn  libresschedexeservice.versionscript
ressched_executor/test/fuzztest/: BUILD.gn
ressched_executor/test/unittest/: BUILD.gn  executor_hitrace_chain_test.cpp  res_sched_exe_client_test.cpp  res_sched_exe_mgr_test.cpp  res_sched_exe_service_test.cpp
ressched_executor/tests/unittest/: BUILD.gn  res_sched_exe_client_test.cpp  res_sched_exe_server_test.cpp
soc_perf/: BUILD.gn  bundle.json  soc_perf.gni
soc_perf/common/include/: socperf_log.h
soc_perf/common/src/: socperf_log.cpp
soc_perf/configs/other/: socperf_boost_config.xml  socperf_power_config.xml  socperf_resource_config.xml  socperf_thermal_config.xml
soc_perf/configs/rk3568/: socperf_boost_config.xml  socperf_power_config.xml  socperf_resource_config.xml  socperf_thermal_config.xml
soc_perf/include/: i_socperf_service.h  socperf_common.h  socperf_service.h
soc_perf/include/client/: socperf_client.h  socperf_proxy.h
soc_perf/include/core/: socperf.h  socperf_handler.h
soc_perf/include/server/: socperf_server.h  socperf_stub.h
soc_perf/init/: socperf_service.cfg
soc_perf/profile/: BUILD.gn
soc_perf/sa_profile/: 1902.xml  1906.json  1906.xml  BUILD.gn
soc_perf/services/: BUILD.gn
soc_perf/src/client/: socperf_client.cpp  (+1 more)
soc_perf/test/: BUILD.gn  socperf_sub_test.cpp  socperf_test.cpp
(+491 files in other folders)
