# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

resourcescheduleservice_path =
    "//foundation/resourceschedule/resource_schedule_service"

resschedexe_common = "${resourcescheduleservice_path}/ressched_executor/common"

resschedexe_interfaces =
    "${resourcescheduleservice_path}/ressched_executor/interfaces"

resschedexe_services =
    "${resourcescheduleservice_path}/ressched_executor/services"

resschedexe_plugins =
    "${resourcescheduleservice_path}/ressched/services/resschedmgr"
