# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../ressched.gni")

config("common_private_config") {
  include_dirs = [ "${ressched_common}/include" ]
}

config("common_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("ressched_common_utils") {
  configs = [ ":common_public_config" ]

  public_configs = [ ":common_private_config" ]

  sources = [
    "../common/src/oobe_datashare_utils.cpp",
    "../common/src/oobe_manager.cpp",
  ]

  deps = []

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:dataobs_manager",
    "c_utils:utils",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
}
