# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("ressched_plugin_config") {
  source = "res_sched_config.xml"

  VENDOR_CONFIG_PATH = rebase_path(
          "//vendor/${product_company}/${product_name}/resourceschedule/ressched/res_sched_config.xml")
  CMD = "if [ -f ${VENDOR_CONFIG_PATH} ]; then echo true; else echo false; fi"

  vendor_config_exist =
      exec_script("//build/lite/run_shell_cmd.py", [ CMD ], "value")
  if (vendor_config_exist) {
    source = VENDOR_CONFIG_PATH
  }

  install_enable = true
  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"
  module_install_dir = "etc/ressched"
}

ohos_prebuilt_etc("ressched_plugin_switch") {
  source = "res_sched_plugin_switch.xml"

  VENDOR_CONFIG_PATH = rebase_path(
          "//vendor/${product_company}/${product_name}/resourceschedule/ressched/res_sched_plugin_switch.xml")
  CMD = "if [ -f ${VENDOR_CONFIG_PATH} ]; then echo true; else echo false; fi"

  vendor_config_exist =
      exec_script("//build/lite/run_shell_cmd.py", [ CMD ], "value")
  if (vendor_config_exist) {
    source = VENDOR_CONFIG_PATH
  }

  install_enable = true
  subsystem_name = "resourceschedule"
  part_name = "resource_schedule_service"
  module_install_dir = "etc/ressched"
}
