# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/resourceschedule/resource_schedule_service/cgroup_sched/cgroup_sched.gni")
import(
    "//foundation/resourceschedule/resource_schedule_service/ressched/ressched.gni")
import(
    "//foundation/resourceschedule/resource_schedule_service/ressched/sched_controller/sched_controller.gni")

ohos_shared_library("sched_controller") {
  include_dirs = [
    "common_event/include",
    "observer/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager/include",
    "//foundation/resourceschedule/device_scheduler/common/include",
    "//foundation/resourceschedule/resource_schedule_service/ressched/common/include",
    "//base/telephony/state_registry/frameworks/native/observer/include",
    "${cgroup_sched_framework}/process_group/include",
    "${cgroup_sched_framework}/sched_controller/include",
    "${cgroup_sched_framework}/utils/include",
    "${cgroup_sched_common}/include",
    "${ressched_common}/include",
    "${ressched_interfaces}/innerkits/ressched_client/include",
  ]

  sources = [
    "${cgroup_sched_common}/cgroup_sched_log.cpp",
    "${cgroup_sched_framework}/utils/ressched_utils.cpp",
    "common_event/src/event_controller.cpp",
    "observer/src/camera_observer.cpp",
    "observer/src/observer_manager.cpp",
    "observer/src/sched_telephony_observer.cpp",
  ]

  deps = [
    "//base/telephony/call_manager/frameworks/native:tel_call_manager_api",
    "//base/telephony/state_registry/frameworks/native/observer:tel_state_registry_api",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_base",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "hisysevent_native:libhisysevent",
    "hisysevent_native:libhisyseventmanager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "resource_schedule_service"
  subsystem_name = "resourceschedule"
}
